--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -716,12 +716,16 @@ video {
   position: relative;
 }
 
-.top-1\/3 {
-  top: 33.333333%;
+.top-1\/4 {
+  top: 25%;
 }
 
 .right-4 {
   right: 1rem;
+}
+
+.top-1\/3 {
+  top: 33.333333%;
 }
 
 .top-2 {
@@ -769,14 +773,6 @@ video {
 
 .mt-10 {
   margin-top: 2.5rem;
-}
-
-.mr-20 {
-  margin-right: 5rem;
-}
-
-.mr-32 {
-  margin-right: 8rem;
 }
 
 .block {
@@ -993,9 +989,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-green-400 {
+.bg-slate-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .p-4 {
@@ -1015,9 +1016,9 @@ video {
   padding-right: 1rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .px-16 {
@@ -1025,9 +1026,9 @@ video {
   padding-right: 4rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-3 {
@@ -1133,30 +1134,6 @@ video {
 
 .pb-6 {
   padding-bottom: 1.5rem;
-}
-
-.pr-32 {
-  padding-right: 8rem;
-}
-
-.pr-44 {
-  padding-right: 11rem;
-}
-
-.pr-48 {
-  padding-right: 12rem;
-}
-
-.pr-52 {
-  padding-right: 13rem;
-}
-
-.pr-56 {
-  padding-right: 14rem;
-}
-
-.pr-64 {
-  padding-right: 16rem;
 }
 
 .text-center {
@@ -1304,19 +1281,14 @@ video {
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
-.hover\:text-white:hover {
+.hover\:text-logic-pest:hover {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(27 139 126 / var(--tw-text-opacity));
 }
 
 .hover\:text-green-800:hover {
   --tw-text-opacity: 1;
   color: rgb(22 101 52 / var(--tw-text-opacity));
-}
-
-.hover\:text-logic-pest:hover {
-  --tw-text-opacity: 1;
-  color: rgb(27 139 126 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
