--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -838,8 +838,8 @@ video {
   margin-top: 3rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .ml-4 {
@@ -886,12 +886,12 @@ video {
   height: 2.5rem;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
 .h-14 {
   height: 3.5rem;
+}
+
+.h-12 {
+  height: 3rem;
 }
 
 .h-20 {
@@ -908,6 +908,11 @@ video {
 
 .h-2\/5 {
   height: 40%;
+}
+
+.max-h-max {
+  max-height: -moz-max-content;
+  max-height: max-content;
 }
 
 .w-full {
@@ -934,8 +939,8 @@ video {
   width: 5rem;
 }
 
-.w-12 {
-  width: 3rem;
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-28 {
@@ -944,6 +949,10 @@ video {
 
 .w-72 {
   width: 18rem;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .w-14 {
@@ -1273,6 +1282,10 @@ video {
   padding-left: 2rem;
 }
 
+.pt-8 {
+  padding-top: 2rem;
+}
+
 .pr-8 {
   padding-right: 2rem;
 }
@@ -1313,10 +1326,6 @@ video {
   padding-top: 1rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1354,6 +1363,11 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .text-4xl {
@@ -1420,11 +1434,6 @@ video {
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-blue-700 {
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
 .text-yellow-400 {
@@ -1610,6 +1619,11 @@ video {
     line-height: 2.25rem;
   }
 
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -1720,12 +1734,12 @@ video {
     padding-left: 0px;
   }
 
-  .md\:pr-0 {
-    padding-right: 0px;
-  }
-
   .md\:pt-0 {
     padding-top: 0px;
+  }
+
+  .md\:pr-0 {
+    padding-right: 0px;
   }
 
   .md\:pb-0 {
@@ -1759,6 +1773,10 @@ video {
 
   .md\:leading-tight {
     line-height: 1.25;
+  }
+
+  .md\:tracking-widest {
+    letter-spacing: 0.1em;
   }
 }
 
