--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -717,7 +717,7 @@ video {
 }
 
 .custom-bg-1{
-  background-image: url("../image/contact-bg.jpg");
+  background: linear-gradient(to top,rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url("../image/contact-bg.jpg");
   background-size:cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1338,6 +1338,10 @@ video {
 
 .pb-6 {
   padding-bottom: 1.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .pb-8 {
