--- a/src/input.css
+++ b/src/input.css
@@ -145,7 +145,7 @@
  }
 
  .custom-bg-1{
-  background-image: url("../image/contact-bg.jpg");
+  background: linear-gradient(to top,rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url("../image/contact-bg.jpg");
   background-size:cover;
   background-position: center;
   background-repeat: no-repeat;
